add divide_by query option
